🔥feat: add login and resgiter account with api-laravel

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     volumes:
       - .:/var/www/html
     environment:
+      APP_ENV: production
+      APP_DEBUG: false
       DB_CONNECTION: ${DB_CONNECTION}
 
 volumes:
